Fix checkstyle errors.