@@ -12,7 +12,17 @@ public class RedisParserTest {
     @Test
     public void shouldParseBidsScanResult() {
         // given
-        final String redisResponse = "[[[{\"tag_key\": \"key_a\", \"imp_id\": \"imp_a\"}]],[[{\"tag_key\": \"key_b\", \"imp_id\": \"imp_b\"}]]]";
+        final String redisResponse = """
+                [
+                    [[{
+                        "tag_key": "key_a",
+                        "imp_id": "imp_a"
+                    }]],
+                    [[{
+                        "tag_key": "key_b",
+                        "imp_id": "imp_b"
+                    }]]
+                ]""";
 
         // when
         final BidsScanResult actualScanResults = redisParser.parseBidsScanResult(redisResponse);
@@ -28,58 +38,59 @@ public class RedisParserTest {
     @Test
     public void shouldParseFullBidsScanResult() {
         // given
-        final String redisResponse = "[[[{\n"
-                + "  \"tag_key\": \"tg\",\n"
-                + "  \"imp_id\": \"123\",\n"
-                + "  \"known_creative\": true,\n"
-                + "  \"ro_skipped\": false,\n"
-                + "  \"issues\": [{\n"
-                + "    \"value\": \"ads.deceivenetworks.net\",\n"
-                + "    \"spec_name\": \"malicious_domain\",\n"
-                + "    \"first_adinstance\": \"e91e8da982bb8b7f80100426\"\n"
-                + "  }],\n"
-                + "  \"attributes\": {\n"
-                + "    \"is_ssl\": true,\n"
-                + "    \"ssl_error\": false,\n"
-                + "    \"width\": 600,\n"
-                + "    \"height\": 300,\n"
-                + "    \"anim\": 5,\n"
-                + "    \"network_load_startup\": 1024,\n"
-                + "    \"network_load_polite\": 1024,\n"
-                + "    \"vast\": {\n"
-                + "      \"redirects\": 3\n"
-                + "    },\n"
-                + "    \"brands\": [\n"
-                + "      \"Pfizer\"\n"
-                + "    ],\n"
-                + "    \"categories\": [\n"
-                + "      {\n"
-                + "        \"code\": \"CAT-2\",\n"
-                + "        \"name\": \"Health and Medical Services\"\n"
-                + "      },\n"
-                + "      {\n"
-                + "        \"code\": \"CAT-75\",\n"
-                + "        \"name\": \"Pharmaceutical Drugs\"\n"
-                + "      }\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"metrics\": {\n"
-                + "    \"submitted\": \"2017-05-10T13:29:28-04:00\",\n"
-                + "    \"fetched\":\"2017-05-10T13:29:29-04:00\",\n"
-                + "    \"scanned\":\"2017-07-22T11:49:40-04:00\",\n"
-                + "    \"synchronized\": {\n"
-                + "      \"first\":\"2017-05-10T13:29:55-04:00\",\n"
-                + "      \"last\":\"2017-07-24T00:52:04-04:00\"\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"adinstance\": \"qwerty\"\n"
-                + "}]]]";
+        final String redisResponse = """
+                [[[{
+                  "tag_key": "tg",
+                  "imp_id": "123",
+                  "known_creative": true,
+                  "ro_skipped": false,
+                  "issues": [{
+                    "value": "ads.deceivenetworks.net",
+                    "spec_name": "malicious_domain",
+                    "first_adinstance": "e91e8da982bb8b7f80100426"
+                  }],
+                  "attributes": {
+                    "is_ssl": true,
+                    "ssl_error": false,
+                    "width": 600,
+                    "height": 300,
+                    "anim": 5,
+                    "network_load_startup": 1024,
+                    "network_load_polite": 1024,
+                    "vast": {
+                      "redirects": 3
+                    },
+                    "brands": [
+                      "Pfizer"
+                    ],
+                    "categories": [
+                      {
+                        "code": "CAT-2",
+                        "name": "Health and Medical Services"
+                      },
+                      {
+                        "code": "CAT-75",
+                        "name": "Pharmaceutical Drugs"
+                      }
+                    ]
+                  },
+                  "metrics": {
+                    "submitted": "2017-05-10T13:29:28-04:00",
+                    "fetched":"2017-05-10T13:29:29-04:00",
+                    "scanned":"2017-07-22T11:49:40-04:00",
+                    "synchronized": {
+                      "first":"2017-05-10T13:29:55-04:00",
+                      "last":"2017-07-24T00:52:04-04:00"
+                    }
+                  },
+                  "adinstance": "qwerty"
+                }]]]""";
 
         // when
         final BidsScanResult actualScanResults = redisParser.parseBidsScanResult(redisResponse);
 
         // then
-        assertThat(actualScanResults.getBidScanResults().get(0).getTagKey()).isEqualTo("tg");
+        assertThat(actualScanResults.getBidScanResults().getFirst().getTagKey()).isEqualTo("tg");
         assertThat(actualScanResults.getBidScanResults().size()).isEqualTo(1);
         assertThat(actualScanResults.getDebugMessages().size()).isEqualTo(0);
     }
@@ -87,14 +98,15 @@ public class RedisParserTest {
     @Test
     public void shouldParseBidsScanResultWithError() {
         // given
-        final String redisResponse = "{\"code\": \"123\", \"message\": \"error message\", \"error\": true, \"dsp_id\": \"cri\"}";
+        final String redisResponse = """
+                {"code": "123", "message": "error message", "error": true, "dsp_id": "cri"}""";
 
         // when
         final BidsScanResult actualScanResults = redisParser.parseBidsScanResult(redisResponse);
 
         // then
         assertThat(actualScanResults.getBidScanResults().size()).isEqualTo(0);
-        assertThat(actualScanResults.getDebugMessages().get(0)).isEqualTo("Redis error - 123: error message");
+        assertThat(actualScanResults.getDebugMessages().getFirst()).isEqualTo("Redis error - 123: error message");
     }
 
     @Test
@@ -107,6 +119,7 @@ public class RedisParserTest {
 
         // then
         assertThat(actualScanResults.getBidScanResults().size()).isEqualTo(0);
-        assertThat(actualScanResults.getDebugMessages().get(0)).isEqualTo("Error during parse redis response: invalid redis response");
+        assertThat(actualScanResults.getDebugMessages().getFirst())
+                .isEqualTo("Error during parse redis response: invalid redis response");
     }
 }
